v14 (#4037)
* set SeriesMetadata on the fly.
add more logging to API things.

* fix breadcrumbs menu when tmdb api is off.
fix hide tmdb api when disabled.

* fixed composer / conductor search

* distinct conductor/composer search

* fix react home autoclose
log upnpstream

* fix auto ColorScheme

* Updated changelog

* 14.0.0-b1

* Fixed incorrectly detecting some sports events as movies

(cherry picked from commit 3055962da6ee992175db1fdc792770401d007dc1)

* added menu option to clear all renderers/devices filters settings
added check to prevent non localhost from setting the "blocked by default"
  because they will be blocked after clicking.

* added menu option to clear all renderers/devices filters settings
added check to prevent non localhost from setting the "blocked by default"
  because they will be blocked after clicking.

* typo

* Merge ums/main into v14

# Conflicts:
#	react-client/src/components/Home/Home.tsx
#	react-client/src/components/Home/NetworkDevices.tsx
#	react-client/src/components/Home/Renderers.tsx
#	react-client/src/components/Settings/RenderersSettings.tsx
#	src/main/external-resources/UMS.conf
#	src/main/java/net/pms/PMS.java
#	src/main/java/net/pms/configuration/UmsConfiguration.java
#	src/main/java/net/pms/gui/IRendererGuiListener.java
#	src/main/java/net/pms/media/audio/MediaAudio.java
#	src/main/java/net/pms/network/NetworkDeviceFilter.java
#	src/main/java/net/pms/network/mediaserver/javahttpserver/ApiHandler.java
#	src/main/java/net/pms/network/mediaserver/javahttpserver/RequestHandler.java
#	src/main/java/net/pms/network/mediaserver/jupnp/support/contentdirectory/UmsContentDirectoryService.java
#	src/main/java/net/pms/network/mediaserver/nettyserver/RequestHandlerV2.java
#	src/main/java/net/pms/network/webguiserver/RendererItem.java
#	src/main/java/net/pms/network/webguiserver/WebGuiServletHelper.java
#	src/main/java/net/pms/network/webguiserver/servlets/RenderersApiServlet.java
