@@ -30,9 +30,9 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.MalformedURLException;
 import java.net.Socket;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.sql.Connection;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Date;
@@ -47,24 +47,11 @@ import javax.xml.transform.TransformerException;
 import javax.xml.xpath.XPathExpressionException;
 import net.pms.PMS;
 import net.pms.configuration.UmsConfiguration;
-import net.pms.database.MediaDatabase;
-import net.pms.database.MediaTableFilesStatus;
 import net.pms.dlna.DLNAImageInputStream;
 import net.pms.dlna.DLNAImageProfile;
-import net.pms.media.chapter.MediaChapter;
-import net.pms.media.MediaInfo;
-import net.pms.media.subtitle.MediaOnDemandSubtitle;
-import net.pms.media.subtitle.MediaSubtitle;
-import net.pms.dlna.DLNAResource;
 import net.pms.dlna.DLNAThumbnailInputStream;
-import net.pms.dlna.DbIdMediaType;
-import net.pms.dlna.DbIdResourceLocator;
-import net.pms.media.MediaType;
-import net.pms.dlna.PlaylistFolder;
-import net.pms.dlna.Range;
-import net.pms.dlna.RealFile;
-import net.pms.dlna.TimeRange;
-import net.pms.dlna.virtual.MediaLibraryFolder;
+import net.pms.dlna.DidlHelper;
+import net.pms.dlna.DlnaHelper;
 import net.pms.encoders.HlsHelper;
 import net.pms.encoders.ImageEngine;
 import net.pms.formats.Format;
@@ -73,10 +60,14 @@ import net.pms.image.BufferedImageFilterChain;
 import net.pms.image.ImagesUtil;
 import net.pms.io.OutputParams;
 import net.pms.io.ProcessWrapper;
+import net.pms.media.MediaInfo;
+import net.pms.media.MediaType;
+import net.pms.media.subtitle.MediaOnDemandSubtitle;
+import net.pms.media.subtitle.MediaSubtitle;
 import net.pms.network.HTTPResource;
 import net.pms.network.mediaserver.HTTPXMLHelper;
 import net.pms.network.mediaserver.MediaServer;
-import net.pms.network.mediaserver.handlers.ApiHandler;
+import net.pms.network.mediaserver.MediaServerRequest;
 import net.pms.network.mediaserver.handlers.SearchRequestHandler;
 import net.pms.network.mediaserver.handlers.message.BrowseRequest;
 import net.pms.network.mediaserver.handlers.message.BrowseSearchRequest;
@@ -85,12 +76,20 @@ import net.pms.network.mediaserver.handlers.message.SearchRequest;
 import net.pms.renderers.Renderer;
 import net.pms.service.Services;
 import net.pms.service.StartStopListenerDelegate;
+import net.pms.store.MediaStatusStore;
+import net.pms.store.MediaStoreIds;
+import net.pms.store.StoreContainer;
+import net.pms.store.StoreItem;
+import net.pms.store.StoreResource;
+import net.pms.store.container.MediaLibrary;
+import net.pms.store.container.PlaylistFolder;
 import net.pms.util.FullyPlayed;
+import net.pms.util.Range;
 import net.pms.util.StringUtil;
 import net.pms.util.SubtitleUtils;
+import net.pms.util.TimeRange;
 import net.pms.util.UMSUtils;
-import static org.apache.commons.lang3.StringUtils.isBlank;
-import static org.apache.commons.lang3.StringUtils.isNotBlank;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.text.StringEscapeUtils;
 import org.jboss.netty.buffer.ChannelBuffer;
 import org.jboss.netty.buffer.ChannelBuffers;
@@ -99,39 +98,40 @@ import org.jboss.netty.channel.ChannelFutureListener;
 import org.jboss.netty.channel.MessageEvent;
 import org.jboss.netty.handler.codec.http.HttpHeaders;
 import org.jboss.netty.handler.codec.http.HttpMethod;
-import static org.jboss.netty.handler.codec.http.HttpMethod.GET;
-import static org.jboss.netty.handler.codec.http.HttpMethod.HEAD;
-import static org.jboss.netty.handler.codec.http.HttpMethod.POST;
 import org.jboss.netty.handler.codec.http.HttpResponse;
 import org.jboss.netty.handler.codec.http.HttpResponseStatus;
 import org.jboss.netty.handler.stream.ChunkedStream;
+import org.jupnp.support.contentdirectory.ContentDirectoryErrorCode;
+import org.jupnp.support.contentdirectory.ContentDirectoryException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.w3c.dom.Document;
 import org.xml.sax.SAXException;
 
 /**
- * This class handles all forms of incoming HTTP requests by constructing a proper HTTP response.
+ * This class handles all forms of incoming HTTP requests by constructing a
+ * proper HTTP response.
  */
 public class RequestV2 extends HTTPResource {
+
 	private static final Logger LOGGER = LoggerFactory.getLogger(RequestV2.class);
 	private static final String CRLF = "\r\n";
 	private static final Pattern DIDL_PATTERN = Pattern.compile("<Result>(&lt;DIDL-Lite.*?)</Result>");
 	private static final SimpleDateFormat SDF = new SimpleDateFormat("EEE, dd MMM yyyy HH:mm:ss", Locale.US);
 	private static final int BUFFER_SIZE = 8 * 1024;
 	private static final String HTTPSERVER_RESPONSE_BEGIN = "================================== HTTPSERVER RESPONSE BEGIN ====================================";
-	private static final String HTTPSERVER_RESPONSE_END =   "================================== HTTPSERVER RESPONSE END ======================================";
+	private static final String HTTPSERVER_RESPONSE_END = "================================== HTTPSERVER RESPONSE END ======================================";
 
 	private final HttpMethod method;
 	private final SearchRequestHandler searchRequestHandler = new SearchRequestHandler();
+	/**
+	 * A {@link String} that contains the uri with which this {@link RequestV2}
+	 * was created.
+	 */
+	private final String uri;
 
 	private UmsConfiguration configuration = PMS.getConfiguration();
 
-	/**
-	 * A {@link String} that contains the uri with which this {@link RequestV2} was
-	 * created.
-	 */
-	private String uri;
 	private String soapaction;
 	private String content;
 	private int startingIndex;
@@ -139,31 +139,36 @@ public class RequestV2 extends HTTPResource {
 	private boolean isVideoThumbnailRequest = false;
 
 	/**
-	 * When sending an input stream, the lowRange indicates which byte to start from.
+	 * When sending an input stream, the lowRange indicates which byte to start
+	 * from.
 	 */
 	private long lowRange;
-	private Renderer mediaRenderer;
+	private Renderer renderer;
 	private String transferMode;
 	private String contentFeatures;
+	private String samsungMediaInfo;
 	private final TimeRange range = new TimeRange();
 
 	/**
-	 * When sending an input stream, the highRange indicates which byte to stop at.
+	 * When sending an input stream, the highRange indicates which byte to stop
+	 * at.
 	 */
 	private long highRange;
 
 	public Renderer getMediaRenderer() {
-		return mediaRenderer;
+		return renderer;
 	}
 
 	public void setMediaRenderer(Renderer renderer) {
-		this.mediaRenderer = renderer;
+		this.renderer = renderer;
 		// Use device-specific pms conf
-		configuration = PMS.getConfiguration(renderer);
+		configuration = renderer.getUmsConfiguration();
 	}
 
 	/**
-	 * When sending an input stream, the lowRange indicates which byte to start from.
+	 * When sending an input stream, the lowRange indicates which byte to start
+	 * from.
+	 *
 	 * @return The byte to start from
 	 */
 	public long getLowRange() {
@@ -171,8 +176,9 @@ public class RequestV2 extends HTTPResource {
 	}
 
 	/**
-	 * Set the byte from which to start when sending an input stream. This value will
-	 * be used to send a CONTENT_RANGE header with the response.
+	 * Set the byte from which to start when sending an input stream. This value
+	 * will be used to send a CONTENT_RANGE header with the response.
+	 *
 	 * @param lowRange The byte to start from.
 	 */
 	public void setLowRange(long lowRange) {
@@ -198,6 +204,14 @@ public class RequestV2 extends HTTPResource {
 		this.contentFeatures = contentFeatures;
 	}
 
+	public String getSamsungMediaInfo() {
+		return samsungMediaInfo;
+	}
+
+	public void setSamsungMediaInfo(String samsungMediaInfo) {
+		this.samsungMediaInfo = samsungMediaInfo;
+	}
+
 	public void setTimeRangeStart(Double timeseek) {
 		this.range.setStart(timeseek);
 	}
@@ -215,7 +229,9 @@ public class RequestV2 extends HTTPResource {
 	}
 
 	/**
-	 * When sending an input stream, the highRange indicates which byte to stop at.
+	 * When sending an input stream, the highRange indicates which byte to stop
+	 * at.
+	 *
 	 * @return The byte to stop at.
 	 */
 	public long getHighRange() {
@@ -223,8 +239,9 @@ public class RequestV2 extends HTTPResource {
 	}
 
 	/**
-	 * Set the byte at which to stop when sending an input stream. This value will
-	 * be used to send a CONTENT_RANGE header with the response.
+	 * Set the byte at which to stop when sending an input stream. This value
+	 * will be used to send a CONTENT_RANGE header with the response.
+	 *
 	 * @param highRange The byte to stop at.
 	 */
 	public void setHighRange(long highRange) {
@@ -232,7 +249,9 @@ public class RequestV2 extends HTTPResource {
 	}
 
 	/**
-	 * This class will construct and transmit a proper HTTP response to a given HTTP request.Rewritten version of the {@link Request} class.
+	 * This class will construct and transmit a proper HTTP response to a given
+	 * HTTP request.Rewritten version of the {@link Request} class.
+	 *
 	 * @param method The {@link String} that defines the HTTP method to be used.
 	 * @param uri
 	 */
@@ -259,8 +278,8 @@ public class RequestV2 extends HTTPResource {
 
 	/**
 	 * LG TVs send us many "play" requests while browsing directories, in order
-	 * for them to show dynamic thumbnails. That means we can skip certain things
-	 * like searching for subtitles and fully played logic.
+	 * for them to show dynamic thumbnails. That means we can skip certain
+	 * things like searching for subtitles and fully played logic.
 	 */
 	public boolean isVideoThumbnailRequest() {
 		return isVideoThumbnailRequest;
@@ -271,187 +290,164 @@ public class RequestV2 extends HTTPResource {
 	}
 
 	/**
-	 * Construct a proper HTTP response to a received request. After the response has been
-	 * created, it is sent and the resulting {@link ChannelFuture} object is returned.
-	 * See <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html">RFC-2616</a>
+	 * Construct a proper HTTP response to a received request. After the
+	 * response has been created, it is sent and the resulting
+	 * {@link ChannelFuture} object is returned. See
+	 * <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html">RFC-2616</a>
 	 * for HTTP header field definitions.
 	 *
-	 * @param output The {@link HttpResponse} object that will be used to construct the response.
-	 * @param event The {@link MessageEvent} object used to communicate with the client that sent
-	 * 			the request.
-	 * @param close Set to true to close the channel after sending the response. By default the
-	 * 			channel is not closed after sending.
-	 * @param startStopListenerDelegate The {@link StartStopListenerDelegate} object that is used
-	 * 			to notify plugins that the {@link DLNAResource} is about to start playing.
+	 * @param output The {@link HttpResponse} object that will be used to
+	 * construct the response.
+	 * @param event The {@link MessageEvent} object used to communicate with the
+	 * client that sent the request.
+	 * @param close Set to true to close the channel after sending the response.
+	 * By default the channel is not closed after sending.
+	 * @param startStopListenerDelegate The {@link StartStopListenerDelegate}
+	 * object that is used to notify plugins that the {@link StoreResource} is
+	 * about to start playing.
 	 * @return The {@link ChannelFuture} object via which the response was sent.
 	 * @throws IOException
 	 */
 	public ChannelFuture answer(
-		HttpResponse output,
-		MessageEvent event,
-		final boolean close,
-		final StartStopListenerDelegate startStopListenerDelegate
+			HttpResponse output,
+			MessageEvent event,
+			final boolean close,
+			final StartStopListenerDelegate startStopListenerDelegate
 	) throws IOException {
 		PMS.REALTIME_LOCK.lock();
 		long cLoverride = -2; // 0 and above are valid Content-Length values, -1 means omit
 		StringBuilder response = new StringBuilder();
-		DLNAResource dlna = null;
+		StoreResource resource = null;
 		InputStream inputStream = null;
 		ChannelFuture future = null;
 		try {
-			// Samsung 2012 TVs have a problematic preceding slash that needs to be removed.
-			if (uri.startsWith("/")) {
-				LOGGER.trace("Stripping preceding slash from: " + uri);
-				uri = uri.substring(1);
-			}
-
 			if (uri.startsWith("api/")) {
-				ApiHandler api = new ApiHandler();
-				response.append(api.handleApiRequest(method, content, output, uri.substring(4), event));
-			} else if ((GET.equals(method) || HEAD.equals(method)) && uri.startsWith("get/")) {
-				// Request to retrieve a file
-
-				/**
-				 * Skip the leading "get/"
-				 * e.g. "get/0$1$5$3$4/Foo.mp4" -> "0$1$5$3$4/Foo.mp4"
-				 *
-				 * ExSport: I spotted on Android it is asking for "/get/0$2$4$2$1$3" which generates exception with response:
-				 * "Http: Response, HTTP/1.1, Status: Internal server error, URL: /get/0$2$4$2$1$3"
-				 * This should fix it
-				 */
-
-				// Note: we intentionally include the trailing filename here because it may
-				// be used to reconstruct lost Temp items.
-				String id = uri.substring(uri.indexOf("get/") + 4);
-
-				// Some clients escape the separators in their request: unescape them.
-				id = id.replace("%24", "$");
-
-				// Retrieve the DLNAresource itself.
-				if (id.startsWith(DbIdMediaType.GENERAL_PREFIX)) {
-					try {
-						dlna = DbIdResourceLocator.locateResource(id.substring(0, id.indexOf('/')), mediaRenderer);
-					} catch (Exception e) {
-						LOGGER.error("", e);
+				response.append(NextcpApiHandler.handleApiRequest(output, uri.substring(4), event));
+			} else if ((HttpMethod.GET.equals(method) || HttpMethod.HEAD.equals(method)) && uri.startsWith("ums/")) {
+				// Request to retrieve a resource
+				// here, renderer should has been registred.
+				MediaServerRequest mediaServerRequest = new MediaServerRequest(uri);
+				if (!mediaServerRequest.isBadRequest()) {
+					// Get resource
+					LOGGER.trace("Looking for resource id : {}", mediaServerRequest.getResourceId());
+					resource = renderer.getMediaStore().getResource(mediaServerRequest.getResourceId());
+					if (resource != null) {
+						LOGGER.trace("Resource with id '{}' was founded : {}", mediaServerRequest.getResourceId(), resource.getName());
+					} else {
+						LOGGER.trace("Resource with id '{}' was not founded", mediaServerRequest.getResourceId());
 					}
-				} else {
-					dlna = PMS.get().getRootFolder(mediaRenderer).getDLNAResource(id, mediaRenderer);
 				}
-				String fileName = id.substring(id.indexOf('/') + 1);
 
 				if (transferMode != null) {
 					output.headers().set("TransferMode.DLNA.ORG", transferMode);
 				}
 
-				if (dlna != null && dlna.isFolder() && !fileName.startsWith("thumbnail0000")) {
-					// if we found a folder we MUST be asked for thumbnails
-					// otherwise this is not allowed
-					dlna = null;
-				}
+				// if we found a folder we MUST be asked for thumbnails
+				// otherwise this is not allowed
+				if (resource != null && mediaServerRequest.isThumbnailRequest()) {
+					// This is a request for a thumbnail file.
+					DLNAImageProfile imageProfile = ImagesUtil.parseImageRequest(mediaServerRequest.getOptionalPath(), DLNAImageProfile.JPEG_TN);
+					output.headers().set(HttpHeaders.Names.CONTENT_TYPE, imageProfile.getMimeType());
+					output.headers().set(HttpHeaders.Names.ACCEPT_RANGES, HttpHeaders.Values.BYTES);
+					output.headers().set(HttpHeaders.Names.EXPIRES, getFutureDate() + " GMT");
+					output.headers().set(HttpHeaders.Names.CONNECTION, HttpHeaders.Values.KEEP_ALIVE);
 
-				if (dlna != null) {
-					// DLNAresource was found.
-					if (fileName.endsWith("/chapters.vtt")) {
+					DLNAThumbnailInputStream thumbInputStream;
+					if (!configuration.isShowCodeThumbs() && !resource.isCodeValid(resource)) {
+						thumbInputStream = resource.getGenericThumbnailInputStream(null);
+					} else {
+						resource.checkThumbnail();
+						thumbInputStream = resource.fetchThumbnailInputStream();
+					}
+
+					BufferedImageFilterChain filterChain = null;
+					if (renderer.isThumbnails() && resource.isFullyPlayedMark()) {
+						filterChain = new BufferedImageFilterChain(FullyPlayed.getOverlayFilter());
+					}
+					filterChain = resource.addFlagFilters(filterChain);
+					inputStream = thumbInputStream.transcode(imageProfile,
+							renderer != null && renderer.isThumbnailPadding(),
+							filterChain
+					);
+					if (contentFeatures != null) {
+						if (configuration.isUpnpJupnpDidl()) {
+							output.headers().set("ContentFeatures.DLNA.ORG",
+								net.pms.network.mediaserver.jupnp.support.contentdirectory.result.DlnaHelper.getDlnaImageContentFeatures(resource, imageProfile, true)
+							);
+						} else {
+							output.headers().set("ContentFeatures.DLNA.ORG",
+								DlnaHelper.getDlnaImageContentFeatures(resource, imageProfile, true)
+							);
+						}
+					}
+					if (inputStream != null && (lowRange > 0 || highRange > 0)) {
+						if (lowRange > 0) {
+							inputStream.skip(lowRange);
+						}
+						inputStream = StoreItem.wrap(inputStream, highRange, lowRange);
+					}
+					output.headers().set(HttpHeaders.Names.ACCEPT_RANGES, HttpHeaders.Values.BYTES);
+					output.headers().set(HttpHeaders.Names.CONNECTION, HttpHeaders.Values.KEEP_ALIVE);
+				} else if (resource instanceof StoreItem item) {
+					// StoreResource was found.
+					if (mediaServerRequest.getOptionalPath().endsWith("/chapters.vtt")) {
 						output.headers().set(HttpHeaders.Names.CONTENT_TYPE, HTTPResource.WEBVTT_TYPEMIME);
-						response.append(MediaChapter.getWebVtt(dlna));
-					} else if (fileName.endsWith("/chapters.json")) {
+						response.append(HlsHelper.getChaptersWebVtt(item));
+					} else if (mediaServerRequest.getOptionalPath().endsWith("/chapters.json")) {
 						output.headers().set(HttpHeaders.Names.CONTENT_TYPE, HTTPResource.JSON_TYPEMIME);
-						response.append(MediaChapter.getHls(dlna));
-					} else if (fileName.startsWith("hls/")) {
+						response.append(HlsHelper.getChaptersHls(item));
+					} else if (mediaServerRequest.getOptionalPath().startsWith("hls/")) {
 						//HLS
-						if (fileName.endsWith(".m3u8")) {
+						if (mediaServerRequest.getOptionalPath().endsWith(".m3u8")) {
 							//HLS rendition m3u8 file
-							String rendition = fileName.replace("hls/", "").replace(".m3u8", "");
+							String rendition = mediaServerRequest.getOptionalPath().replace("hls/", "").replace(".m3u8", "");
 							if (HlsHelper.getByKey(rendition) != null) {
 								output.headers().set(HttpHeaders.Names.CONTENT_TYPE, HTTPResource.HLS_TYPEMIME);
-								response.append(HlsHelper.getHLSm3u8ForRendition(dlna, mediaRenderer, "/get/", rendition));
+								String baseUrl = MediaServerRequest.getMediaURL(renderer.getUUID()).toString();
+								response.append(HlsHelper.getHLSm3u8ForRendition(item, renderer, baseUrl, rendition));
 							}
 						} else {
 							//HLS stream request
-							cLoverride = MediaInfo.TRANS_SIZE;
-							inputStream = HlsHelper.getInputStream("/" + fileName, dlna, mediaRenderer);
-							if (fileName.endsWith(".ts")) {
+							cLoverride = StoreResource.TRANS_SIZE;
+							inputStream = HlsHelper.getInputStream("/" + mediaServerRequest.getOptionalPath(), item);
+							if (mediaServerRequest.getOptionalPath().endsWith(".ts")) {
 								output.headers().set(HttpHeaders.Names.CONTENT_TYPE, HTTPResource.MPEGTS_BYTESTREAM_TYPEMIME);
-							} else if (fileName.endsWith(".vtt")) {
+							} else if (mediaServerRequest.getOptionalPath().endsWith(".vtt")) {
 								output.headers().set(HttpHeaders.Names.CONTENT_TYPE, HTTPResource.WEBVTT_TYPEMIME);
 							}
 						}
-					} else if (fileName.endsWith("_transcoded_to.m3u8")) {
+					} else if (mediaServerRequest.getOptionalPath().endsWith("_transcoded_to.m3u8")) {
 						//HLS start m3u8 file
 						output.headers().set(HttpHeaders.Names.CONTENT_TYPE, HTTPResource.HLS_TYPEMIME);
-						response.append(HlsHelper.getHLSm3u8(dlna, mediaRenderer, "/get/"));
+						String baseUrl = MediaServerRequest.getMediaURL(renderer.getUUID()).toString();
+						response.append(HlsHelper.getHLSm3u8(item, renderer, baseUrl));
 						if (contentFeatures != null) {
-							//output.headers().set("transferMode.dlna.org", "Streaming");
-							if (dlna.getMedia().getDurationInSeconds() > 0) {
-								String durationStr = String.format(Locale.ENGLISH, "%.3f", dlna.getMedia().getDurationInSeconds());
+							//output.headers().set("transferMode.HlsHelper.org", "Streaming");
+							//only time seek, transcoded
+							output.headers().set("ContentFeatures.DLNA.ORG", "DLNA.ORG_OP=10;DLNA.ORG_CI=1;DLNA.ORG_FLAGS=41700000000000000000000000000000");
+							if (item.getMediaInfo().getDurationInSeconds() > 0) {
+								String durationStr = String.format(Locale.ENGLISH, "%.3f", item.getMediaInfo().getDurationInSeconds());
 								output.headers().set("TimeSeekRange.dlna.org", "npt=0-" + durationStr + "/" + durationStr);
 								output.headers().set("X-AvailableSeekRange", "npt=0-" + durationStr);
-								//only time seek, transcoded
-								output.headers().set("ContentFeatures.DLNA.ORG", "DLNA.ORG_OP=10;DLNA.ORG_CI=1;DLNA.ORG_FLAGS=41700000000000000000000000000000");
 							}
 						}
-					} else if (fileName.startsWith("thumbnail0000")) {
-						// This is a request for a thumbnail file.
-						DLNAImageProfile imageProfile = ImagesUtil.parseThumbRequest(fileName);
-						output.headers().set(HttpHeaders.Names.CONTENT_TYPE, imageProfile.getMimeType());
-						output.headers().set(HttpHeaders.Names.ACCEPT_RANGES, HttpHeaders.Values.BYTES);
-						output.headers().set(HttpHeaders.Names.EXPIRES, getFutureDate() + " GMT");
-						output.headers().set(HttpHeaders.Names.CONNECTION, HttpHeaders.Values.KEEP_ALIVE);
-
-						DLNAThumbnailInputStream thumbInputStream;
-						if (!configuration.isShowCodeThumbs() && !dlna.isCodeValid(dlna)) {
-							thumbInputStream = dlna.getGenericThumbnailInputStream(null);
-						} else {
-							dlna.checkThumbnail();
-							thumbInputStream = dlna.fetchThumbnailInputStream();
+						if (samsungMediaInfo != null && item.getMediaInfo().getDurationInSeconds() > 0) {
+							output.headers().set("MediaInfo.sec", "SEC_Duration=" + (long) (item.getMediaInfo().getDurationInSeconds() * 1000));
 						}
-
-						BufferedImageFilterChain filterChain = null;
-						if (
-							(
-								dlna instanceof RealFile &&
-								mediaRenderer.isThumbnails() &&
-								FullyPlayed.isFullyPlayedFileMark(((RealFile) dlna).getFile())
-							) ||
-							(
-								dlna instanceof MediaLibraryFolder &&
-								((MediaLibraryFolder) dlna).isTVSeries() &&
-								FullyPlayed.isFullyPlayedTVSeriesMark(((MediaLibraryFolder) dlna).getName())
-							)
-						) {
-							filterChain = new BufferedImageFilterChain(FullyPlayed.getOverlayFilter());
-						}
-						filterChain = dlna.addFlagFilters(filterChain);
-						inputStream = thumbInputStream.transcode(
-							imageProfile,
-							mediaRenderer != null && mediaRenderer.isThumbnailPadding(),
-							filterChain
-						);
-						if (contentFeatures != null) {
-							output.headers().set(
-								"ContentFeatures.DLNA.ORG",
-								dlna.getDlnaContentFeatures(imageProfile, true)
-							);
-						}
-						if (inputStream != null && (lowRange > 0 || highRange > 0)) {
-							if (lowRange > 0) {
-								inputStream.skip(lowRange);
-							}
-							inputStream = DLNAResource.wrap(inputStream, highRange, lowRange);
-						}
-						output.headers().set(HttpHeaders.Names.ACCEPT_RANGES, HttpHeaders.Values.BYTES);
-						output.headers().set(HttpHeaders.Names.CONNECTION, HttpHeaders.Values.KEEP_ALIVE);
-					} else if (dlna.getMedia() != null && dlna.getMedia().getMediaType() == MediaType.IMAGE && dlna.isCodeValid(dlna)) {
+					} else if (item.getMediaInfo() != null && item.getMediaInfo().getMediaType() == MediaType.IMAGE && item.isCodeValid(item)) {
 						// This is a request for an image
-						Services.sleepManager().postponeSleep();
-						DLNAImageProfile imageProfile = ImagesUtil.parseImageRequest(fileName, null);
+						Services.postponeSleep();
+						DLNAImageProfile imageProfile = ImagesUtil.parseImageRequest(mediaServerRequest.getOptionalPath(), null);
 						if (imageProfile == null) {
 							// Parsing failed for some reason, we'll have to pick a profile
-							if (dlna.getMedia().getImageInfo() != null && dlna.getMedia().getImageInfo().getFormat() != null) {
-								imageProfile = switch (dlna.getMedia().getImageInfo().getFormat()) {
-									case GIF -> DLNAImageProfile.GIF_LRG;
-									case PNG -> DLNAImageProfile.PNG_LRG;
-									default -> DLNAImageProfile.JPEG_LRG;
+							if (item.getMediaInfo().getImageInfo() != null && item.getMediaInfo().getImageInfo().getFormat() != null) {
+								imageProfile = switch (item.getMediaInfo().getImageInfo().getFormat()) {
+									case GIF ->
+										DLNAImageProfile.GIF_LRG;
+									case PNG ->
+										DLNAImageProfile.PNG_LRG;
+									default ->
+										DLNAImageProfile.JPEG_LRG;
 								};
 							} else {
 								imageProfile = DLNAImageProfile.JPEG_LRG;
@@ -463,31 +459,35 @@ public class RequestV2 extends HTTPResource {
 						output.headers().set(HttpHeaders.Names.CONNECTION, HttpHeaders.Values.KEEP_ALIVE);
 						try {
 							InputStream imageInputStream;
-							if (dlna.getEngine() instanceof ImageEngine) {
-								ProcessWrapper transcodeProcess = dlna.getEngine().launchTranscode(
-									dlna,
-									dlna.getMedia(),
-									new OutputParams(configuration)
+							if (item.getEngine() instanceof ImageEngine) {
+								ProcessWrapper transcodeProcess = item.getEngine().launchTranscode(item,
+										item.getMediaInfo(),
+										new OutputParams(configuration)
 								);
 								imageInputStream = transcodeProcess != null ? transcodeProcess.getInputStream(0) : null;
 							} else {
-								imageInputStream = dlna.getInputStream();
+								imageInputStream = item.getInputStream();
 							}
 							if (imageInputStream == null) {
-								LOGGER.warn("Input stream returned for \"{}\" was null, no image will be sent to renderer", fileName);
+								LOGGER.warn("Input stream returned for \"{}\" was null, no image will be sent to renderer", mediaServerRequest.getOptionalPath());
 							} else {
 								inputStream = DLNAImageInputStream.toImageInputStream(imageInputStream, imageProfile, false);
 								if (contentFeatures != null) {
-									output.headers().set(
-										"ContentFeatures.DLNA.ORG",
-										dlna.getDlnaContentFeatures(imageProfile, false)
-									);
+									if (configuration.isUpnpJupnpDidl()) {
+										output.headers().set("ContentFeatures.DLNA.ORG",
+											net.pms.network.mediaserver.jupnp.support.contentdirectory.result.DlnaHelper.getDlnaImageContentFeatures(item, imageProfile, false)
+										);
+									} else {
+										output.headers().set("ContentFeatures.DLNA.ORG",
+											DlnaHelper.getDlnaImageContentFeatures(item, imageProfile, false)
+										);
+									}
 								}
 								if (inputStream != null && (lowRange > 0 || highRange > 0)) {
 									if (lowRange > 0) {
 										inputStream.skip(lowRange);
 									}
-									inputStream = DLNAResource.wrap(inputStream, highRange, lowRange);
+									inputStream = StoreItem.wrap(inputStream, highRange, lowRange);
 								}
 								output.headers().set(HttpHeaders.Names.ACCEPT_RANGES, HttpHeaders.Values.BYTES);
 								output.headers().set(HttpHeaders.Names.CONNECTION, HttpHeaders.Values.KEEP_ALIVE);
@@ -504,15 +504,15 @@ public class RequestV2 extends HTTPResource {
 								future.addListener(ChannelFutureListener.CLOSE);
 							}
 
-							LOGGER.debug("Could not send image \"{}\": {}", dlna.getName(), ie.getMessage() != null ? ie.getMessage() : ie.getClass().getSimpleName());
+							LOGGER.debug("Could not send image \"{}\": {}", item.getName(), ie.getMessage() != null ? ie.getMessage() : ie.getClass().getSimpleName());
 							LOGGER.trace("", ie);
 							return future;
 						}
-					} else if (dlna.getMedia() != null && fileName.contains("subtitle0000") && dlna.isCodeValid(dlna)) {
+					} else if (item.getMediaInfo() != null && mediaServerRequest.isSubtitlesRequest() && item.isCodeValid(item)) {
 						// This is a request for a subtitles file
 						output.headers().set(HttpHeaders.Names.CONTENT_TYPE, "text/plain");
 						output.headers().set(HttpHeaders.Names.EXPIRES, getFutureDate() + " GMT");
-						MediaSubtitle sub = dlna.getMediaSubtitle();
+						MediaSubtitle sub = item.getMediaSubtitle();
 						if (sub != null) {
 							// XXX external file is null if the first subtitle track is embedded
 							if (sub.isExternal()) {
@@ -524,7 +524,7 @@ public class RequestV2 extends HTTPResource {
 									LOGGER.error("External subtitles file \"{}\" is unavailable", sub.getName());
 								} else {
 									try {
-										if (sub.getType() == SubtitleType.SUBRIP && mediaRenderer.isRemoveTagsFromSRTsubs()) {
+										if (sub.getType() == SubtitleType.SUBRIP && renderer.isRemoveTagsFromSRTsubs()) {
 											// Remove tags from .srt subtitles if the renderer doesn't support them
 											inputStream = SubtitleUtils.removeSubRipTags(sub.getExternalFile());
 										} else {
@@ -542,17 +542,13 @@ public class RequestV2 extends HTTPResource {
 						} else {
 							LOGGER.trace("Not sending external subtitles because dlna.getMediaSubtitle() returned null");
 						}
-					} else if (dlna.isCodeValid(dlna)) {
+					} else if (item.isCodeValid(item)) {
 						// This is a request for a regular file.
-						DLNAResource.Rendering origRendering = null;
-						if (!mediaRenderer.equals(dlna.getDefaultRenderer())) {
-							// Adjust rendering details for this renderer
-							origRendering = dlna.updateRendering(mediaRenderer);
-						}
-						// If range has not been initialized yet and the DLNAResource has its
+
+						// If range has not been initialized yet and the StoreResource has its
 						// own start and end defined, initialize range with those values before
 						// requesting the input stream.
-						TimeRange splitRange = dlna.getSplitRange();
+						TimeRange splitRange = item.getSplitRange();
 
 						if (range.getStart() == null && splitRange.getStart() != null) {
 							range.setStart(splitRange.getStart());
@@ -562,69 +558,55 @@ public class RequestV2 extends HTTPResource {
 							range.setEnd(splitRange.getEnd());
 						}
 
-						long totalsize = dlna.length(mediaRenderer);
-						boolean ignoreTranscodeByteRangeRequests = mediaRenderer.ignoreTranscodeByteRangeRequests();
+						long totalsize = item.length();
+						boolean ignoreTranscodeByteRangeRequests = renderer.ignoreTranscodeByteRangeRequests();
 
 						// Ignore ByteRangeRequests while media is transcoded
-						if (
-							!ignoreTranscodeByteRangeRequests ||
-							totalsize != MediaInfo.TRANS_SIZE ||
-							(
-								ignoreTranscodeByteRangeRequests &&
+						if (!ignoreTranscodeByteRangeRequests ||
+								totalsize != StoreResource.TRANS_SIZE ||
+								(ignoreTranscodeByteRangeRequests &&
 								lowRange == 0 &&
-								totalsize == MediaInfo.TRANS_SIZE
-							)
-						) {
-							inputStream = dlna.getInputStream(Range.create(lowRange, highRange, range.getStart(), range.getEnd()), mediaRenderer);
-							if (dlna.isResume()) {
+								totalsize == StoreResource.TRANS_SIZE)) {
+							inputStream = item.getInputStream(Range.create(lowRange, highRange, range.getStart(), range.getEnd()));
+							if (item.isResume()) {
 								// Update range to possibly adjusted resume time
-								range.setStart(dlna.getResume().getTimeOffset() / (double) 1000);
+								range.setStart(item.getResume().getTimeOffset() / (double) 1000);
 							}
 						}
 
-						Format format = dlna.getFormat();
+						Format format = item.getFormat();
 						if (!isVideoThumbnailRequest && format != null && format.isVideo()) {
-							MediaType mediaType = dlna.getMedia() == null ? null : dlna.getMedia().getMediaType();
+							MediaType mediaType = item.getMediaInfo() == null ? null : item.getMediaInfo().getMediaType();
 							if (mediaType == MediaType.VIDEO) {
-								if (
-									dlna.getMedia() != null &&
-									dlna.getMediaSubtitle() != null &&
-									dlna.getMediaSubtitle().isExternal() &&
-									!configuration.isDisableSubtitles() &&
-									mediaRenderer.isExternalSubtitlesFormatSupported(dlna.getMediaSubtitle(), dlna)
-								) {
-									String subtitleHttpHeader = mediaRenderer.getSubtitleHttpHeader();
-									if (isNotBlank(subtitleHttpHeader)  && (dlna.getEngine() == null || mediaRenderer.streamSubsForTranscodedVideo())) {
+								if (item.getMediaInfo() != null &&
+										item.getMediaSubtitle() != null &&
+										item.getMediaSubtitle().isExternal() &&
+										!configuration.isDisableSubtitles() &&
+										renderer.isExternalSubtitlesFormatSupported(item.getMediaSubtitle(), item)) {
+									String subtitleHttpHeader = renderer.getSubtitleHttpHeader();
+									if (StringUtils.isNotBlank(subtitleHttpHeader) && (item.getEngine() == null || renderer.streamSubsForTranscodedVideo())) {
 										// Device allows a custom subtitle HTTP header; construct it
-										MediaSubtitle sub = dlna.getMediaSubtitle();
-										String subtitleUrl;
-										String subExtension = sub.getType().getExtension();
-										if (isNotBlank(subExtension)) {
-											subExtension = "." + subExtension;
-										}
-										subtitleUrl = MediaServer.getURL() + "/get/" +
-											id.substring(0, id.indexOf('/')) + "/subtitle0000" + subExtension;
-
-											output.headers().set(subtitleHttpHeader, subtitleUrl);
+										MediaSubtitle sub = item.getMediaSubtitle();
+										output.headers().set(subtitleHttpHeader, item.getSubsURL(sub));
 									} else {
 										LOGGER.trace(
-											"Did not send subtitle headers because mediaRenderer.getSubtitleHttpHeader() returned {}",
-											subtitleHttpHeader == null ? "null" : "\"" + subtitleHttpHeader + "\""
-											);
+												"Did not send subtitle headers because renderer.getSubtitleHttpHeader() returned {}",
+												subtitleHttpHeader == null ? "null" : "\"" + subtitleHttpHeader + "\""
+										);
 									}
 								} else {
 									ArrayList<String> reasons = new ArrayList<>();
-									if (dlna.getMedia() == null) {
-										reasons.add("dlna.getMedia() is null");
+									if (item.getMediaInfo() == null) {
+										reasons.add("item.getMedia() is null");
 									}
 									if (configuration.isDisableSubtitles()) {
 										reasons.add("configuration.isDisabledSubtitles() is true");
 									}
-									if (dlna.getMediaSubtitle() == null) {
-										reasons.add("dlna.getMediaSubtitle() is null");
-									} else if (!dlna.getMediaSubtitle().isExternal()) {
+									if (item.getMediaSubtitle() == null) {
+										reasons.add("item.getMediaSubtitle() is null");
+									} else if (!item.getMediaSubtitle().isExternal()) {
 										reasons.add("the subtitles are internal/embedded");
-									} else if (!mediaRenderer.isExternalSubtitlesFormatSupported(dlna.getMediaSubtitle(), dlna)) {
+									} else if (!renderer.isExternalSubtitlesFormatSupported(item.getMediaSubtitle(), item)) {
 										reasons.add("the external subtitles format isn't supported by the renderer");
 									}
 									LOGGER.trace("Did not send subtitle headers because {}", StringUtil.createReadableCombinedString(reasons));
@@ -632,9 +614,9 @@ public class RequestV2 extends HTTPResource {
 							}
 						}
 
-						String name = dlna.getDisplayName(mediaRenderer);
-						if (dlna.isNoName()) {
-							name = dlna.getName() + " " + dlna.getDisplayName(mediaRenderer);
+						String name = item.getDisplayName();
+						if (item.isNoName()) {
+							name = item.getName() + " " + item.getDisplayName();
 						}
 
 						if (inputStream == null) {
@@ -644,11 +626,11 @@ public class RequestV2 extends HTTPResource {
 							}
 						} else {
 							if (startStopListenerDelegate != null) {
-								startStopListenerDelegate.start(dlna);
+								startStopListenerDelegate.start(item);
 							}
 
 							// Try to determine the content type of the file
-							String rendererMimeType = getRendererMimeType(mediaRenderer, dlna);
+							String rendererMimeType = renderer.getMimeType(item);
 
 							if (rendererMimeType != null && !"".equals(rendererMimeType)) {
 								output.headers().set(HttpHeaders.Names.CONTENT_TYPE, rendererMimeType);
@@ -657,11 +639,11 @@ public class RequestV2 extends HTTPResource {
 							// Response generation:
 							// We use -1 for arithmetic convenience but don't send it as a value.
 							// If Content-Length < 0 we omit it, for Content-Range we use '*' to signify unspecified.
-							boolean chunked = mediaRenderer.isChunkedTransfer();
+							boolean chunked = renderer.isChunkedTransfer();
 
 							// Determine the total size. Note: when transcoding the length is
 							// not known in advance, so MediaInfo.TRANS_SIZE will be returned instead.
-							if (chunked && totalsize == MediaInfo.TRANS_SIZE) {
+							if (chunked && totalsize == StoreResource.TRANS_SIZE) {
 								// In chunked mode we try to avoid arbitrary values.
 								totalsize = -1;
 							}
@@ -700,25 +682,31 @@ public class RequestV2 extends HTTPResource {
 							highRange = lowRange + cLoverride - (cLoverride > 0 ? 1 : 0);
 
 							if (contentFeatures != null) {
-								output.headers().set("ContentFeatures.DLNA.ORG", dlna.getDlnaContentFeatures(mediaRenderer));
+								if (configuration.isUpnpJupnpDidl()) {
+									output.headers().set("ContentFeatures.DLNA.ORG", net.pms.network.mediaserver.jupnp.support.contentdirectory.result.DlnaHelper.getDlnaContentFeatures(item));
+								} else {
+									output.headers().set("ContentFeatures.DLNA.ORG", DlnaHelper.getDlnaContentFeatures(item));
+								}
+							}
+
+							if (samsungMediaInfo != null && item.getMediaInfo().getDurationInSeconds() > 0) {
+								output.headers().set("MediaInfo.sec", "SEC_Duration=" + (long) (item.getMediaInfo().getDurationInSeconds() * 1000));
 							}
 
 							output.headers().set(HttpHeaders.Names.ACCEPT_RANGES, HttpHeaders.Values.BYTES);
-							output.headers().set(HttpHeaders.Names.CONNECTION, HttpHeaders.Values.KEEP_ALIVE);
-						}
-						if (origRendering != null) {
-							// Restore original rendering details
-							dlna.updateRendering(origRendering);
+							if (HttpMethod.GET.equals(method)) {
+								output.headers().set(HttpHeaders.Names.CONNECTION, HttpHeaders.Values.KEEP_ALIVE);
+							}
 						}
 					}
 				}
-			} else if ((GET.equals(method) || HEAD.equals(method)) && (uri.toLowerCase().endsWith(".png") || uri.toLowerCase().endsWith(".jpg") || uri.toLowerCase().endsWith(".jpeg"))) {
+			} else if ((HttpMethod.GET.equals(method) || HttpMethod.HEAD.equals(method)) && (uri.toLowerCase().endsWith(".png") || uri.toLowerCase().endsWith(".jpg") || uri.toLowerCase().endsWith(".jpeg"))) {
 				inputStream = imageHandler(output);
 
-			//------------------------- START ContentDirectory -------------------------
-			} else if (GET.equals(method) && uri.endsWith("/ContentDirectory/desc")) {
+				//------------------------- START ContentDirectory -------------------------
+			} else if (HttpMethod.GET.equals(method) && uri.endsWith("/ContentDirectory/desc")) {
 				response.append(contentDirectorySpec(output));
-			} else if (POST.equals(method) && uri.endsWith("/ContentDirectory/action")) {
+			} else if (HttpMethod.POST.equals(method) && uri.endsWith("/ContentDirectory/action")) {
 				output.headers().set(HttpHeaders.Names.CONTENT_TYPE, "text/xml; charset=\"utf-8\"");
 				if (soapaction != null && soapaction.contains("ContentDirectory:1#GetSystemUpdateID")) {
 					response.append(getSystemUpdateIdHandler());
@@ -729,7 +717,7 @@ public class RequestV2 extends HTTPResource {
 				} else if (soapaction != null && soapaction.contains("ContentDirectory:1#GetSortCapabilities")) {
 					response.append(getSortCapabilitiesHandler());
 				} else if (soapaction != null && soapaction.contains("ContentDirectory:1#GetSearchCapabilities")) {
-					response.append(getSearchCapabilitiesHandler(mediaRenderer));
+					response.append(getSearchCapabilitiesHandler(renderer));
 				} else if (soapaction != null && soapaction.contains("ContentDirectory:1#Browse")) {
 					response.append(browseHandler());
 				} else if (soapaction != null && soapaction.contains("ContentDirectory:1#Search")) {
@@ -741,10 +729,10 @@ public class RequestV2 extends HTTPResource {
 				response.append(subscribeHandler(output));
 			} else if (method.getName().equals("NOTIFY")) {
 				response.append(notifyHandler(output));
-			//------------------------- END ContentDirectory -------------------------
+				//------------------------- END ContentDirectory -------------------------
 			}
 
-			output.headers().set(HttpHeaders.Names.SERVER, PMS.get().getServerName());
+			output.headers().set(HttpHeaders.Names.SERVER, MediaServer.getServerName());
 
 			if (response.length() > 0) {
 				// A response message was constructed; convert it to data ready to be sent.
@@ -752,7 +740,7 @@ public class RequestV2 extends HTTPResource {
 				output.headers().set(HttpHeaders.Names.CONTENT_LENGTH, "" + responseData.length);
 
 				// HEAD requests only require headers to be set, no need to set contents.
-				if (!HEAD.equals(method)) {
+				if (!HttpMethod.HEAD.equals(method)) {
 					// Not a HEAD request, so set the contents of the response.
 					ChannelBuffer buf = ChannelBuffers.copiedBuffer(responseData);
 					output.setContent(buf);
@@ -770,7 +758,7 @@ public class RequestV2 extends HTTPResource {
 
 				if (cLoverride > -2) {
 					// Content-Length override has been set, send or omit as appropriate
-					if (cLoverride > -1 && cLoverride != MediaInfo.TRANS_SIZE) {
+					if (cLoverride > -1 && cLoverride != StoreResource.TRANS_SIZE) {
 						// Since PS3 firmware 2.50, it is wiser not to send an arbitrary Content-Length,
 						// as the PS3 will display a network error and request the last seconds of the
 						// transcoded video. Better to send no Content-Length at all.
@@ -782,10 +770,10 @@ public class RequestV2 extends HTTPResource {
 					output.headers().set(HttpHeaders.Names.CONTENT_LENGTH, "" + contentLength);
 				}
 
-				if (range.isStartOffsetAvailable() && dlna != null) {
+				if (range.isStartOffsetAvailable() && resource instanceof StoreItem item) {
 					// Add timeseek information headers.
 					String timeseekValue = StringUtil.formatDLNADuration(range.getStartOrZero());
-					String timetotalValue = dlna.getMedia().getDurationString();
+					String timetotalValue = item.getMediaInfo().getDurationString();
 					String timeEndValue = range.isEndLimitAvailable() ? StringUtil.formatDLNADuration(range.getEnd()) : timetotalValue;
 					output.headers().set("TimeSeekRange.dlna.org", "npt=" + timeseekValue + "-" + timeEndValue + "/" + timetotalValue);
 					output.headers().set("X-Seek-Range", "npt=" + timeseekValue + "-" + timeEndValue + "/" + timetotalValue);
@@ -794,7 +782,7 @@ public class RequestV2 extends HTTPResource {
 				// Send the response headers to the client.
 				future = event.getChannel().write(output);
 
-				if (lowRange != MediaInfo.ENDFILE_POS && !HEAD.equals(method)) {
+				if (lowRange != MediaInfo.ENDFILE_POS && !HttpMethod.HEAD.equals(method)) {
 					// Send the response body to the client in chunks.
 					ChannelFuture chunkWriteFuture = event.getChannel().write(new ChunkedStream(inputStream, BUFFER_SIZE));
 
@@ -843,8 +831,19 @@ public class RequestV2 extends HTTPResource {
 					future.addListener(ChannelFutureListener.CLOSE);
 				}
 			}
-		} catch (Exception e) {
+		} catch (IOException e) {
 			LOGGER.error("error while generating answer", e);
+		} catch (ContentDirectoryException ex) {
+			output.headers().set(HttpHeaders.Names.CONTENT_LENGTH, "0");
+			output.headers().remove(HttpHeaders.Names.CONTENT_TYPE);
+			output.setStatus(new HttpResponseStatus(ex.getErrorCode(), ex.getMessage()));
+			// Send the response headers to the client.
+			future = event.getChannel().write(output);
+
+			if (close) {
+				// Close the channel after the response is sent.
+				future.addListener(ChannelFutureListener.CLOSE);
+			}
 		} finally {
 			PMS.REALTIME_LOCK.unlock();
 		}
@@ -871,9 +870,9 @@ public class RequestV2 extends HTTPResource {
 	private void logRequest(HttpResponse output, StringBuilder response, InputStream iStream) {
 		StringBuilder header = new StringBuilder();
 		for (Entry<String, String> entry : output.headers().entries()) {
-			if (isNotBlank(entry.getKey())) {
+			if (StringUtils.isNotBlank(entry.getKey())) {
 				header.append("  ").append(entry.getKey())
-				.append(": ").append(entry.getValue()).append("\n");
+						.append(": ").append(entry.getValue()).append("\n");
 			}
 		}
 		if (header.length() > 0) {
@@ -883,46 +882,46 @@ public class RequestV2 extends HTTPResource {
 		String responseCode = output.getProtocolVersion() + " " + output.getStatus();
 		String rendererName = getRendererName();
 		String contentType = output.headers().get(HttpHeaders.Names.CONTENT_TYPE);
-		if (HEAD.equals(method)) {
+		if (HttpMethod.HEAD.equals(method)) {
 			LOGGER.trace(
-				"HEAD only response sent to {}:\n{}\n{}\n{}{}",
-				rendererName,
-				HTTPSERVER_RESPONSE_BEGIN,
-				responseCode,
-				header,
-				HTTPSERVER_RESPONSE_END
+					"HEAD only response sent to {}:\n{}\n{}\n{}{}",
+					rendererName,
+					HTTPSERVER_RESPONSE_BEGIN,
+					responseCode,
+					header,
+					HTTPSERVER_RESPONSE_END
 			);
 		} else {
 			String formattedResponse = null;
-			if (isNotBlank(response)) {
+			if (StringUtils.isNotBlank(response)) {
 				if (contentType != null && contentType.startsWith("text/xml")) {
 					try {
 						formattedResponse = StringUtil.prettifyXML(response.toString(), StandardCharsets.UTF_8, 4);
 					} catch (SAXException | ParserConfigurationException | XPathExpressionException | TransformerException e) {
-						formattedResponse = "  Content isn't valid XML, using text formatting: " + e.getMessage()  + "\n";
+						formattedResponse = "  Content isn't valid XML, using text formatting: " + e.getMessage() + "\n";
 						formattedResponse += "    " + response.toString().replace("\n", "\n    ");
 					}
 				} else {
 					formattedResponse = response.toString();
 				}
 			}
-			if (isNotBlank(formattedResponse)) {
+			if (StringUtils.isNotBlank(formattedResponse)) {
 				LOGGER.trace(
-					"Response sent to {}:\n{}\n{}\n{}\nCONTENT:\n{}{}",
-					rendererName,
-					HTTPSERVER_RESPONSE_BEGIN,
-					responseCode,
-					header,
-					formattedResponse,
-					HTTPSERVER_RESPONSE_END
+						"Response sent to {}:\n{}\n{}\n{}\nCONTENT:\n{}{}",
+						rendererName,
+						HTTPSERVER_RESPONSE_BEGIN,
+						responseCode,
+						header,
+						formattedResponse,
+						HTTPSERVER_RESPONSE_END
 				);
 				Matcher matcher = DIDL_PATTERN.matcher(response);
 				if (matcher.find()) {
 					try {
 						LOGGER.trace(
-							"The unescaped <Result> sent to {} is:\n{}",
-							rendererName,
-							StringUtil.prettifyXML(StringEscapeUtils.unescapeXml(matcher.group(1)), StandardCharsets.UTF_8, 2)
+								"The unescaped <Result> sent to {} is:\n{}",
+								rendererName,
+								StringUtil.prettifyXML(StringEscapeUtils.unescapeXml(matcher.group(1)), StandardCharsets.UTF_8, 2)
 						);
 					} catch (SAXException | ParserConfigurationException | XPathExpressionException | TransformerException e) {
 						LOGGER.warn("Failed to prettify DIDL-Lite document: {}", e.getMessage());
@@ -931,22 +930,22 @@ public class RequestV2 extends HTTPResource {
 				}
 			} else if (iStream != null && !"0".equals(output.headers().get(HttpHeaders.Names.CONTENT_LENGTH))) {
 				LOGGER.trace(
-					"Transfer response sent to {}:\n{}\n{} ({})\n{}{}",
-					rendererName,
-					HTTPSERVER_RESPONSE_BEGIN,
-					responseCode,
-					output.isChunked() ? "chunked" : "non-chunked",
-					header,
-					HTTPSERVER_RESPONSE_END
+						"Transfer response sent to {}:\n{}\n{} ({})\n{}{}",
+						rendererName,
+						HTTPSERVER_RESPONSE_BEGIN,
+						responseCode,
+						output.isChunked() ? "chunked" : "non-chunked",
+						header,
+						HTTPSERVER_RESPONSE_END
 				);
 			} else {
 				LOGGER.trace(
-					"Empty response sent to {}:\n{}\n{}\n{}{}",
-					rendererName,
-					HTTPSERVER_RESPONSE_BEGIN,
-					responseCode,
-					header,
-					HTTPSERVER_RESPONSE_END
+						"Empty response sent to {}:\n{}\n{}\n{}{}",
+						rendererName,
+						HTTPSERVER_RESPONSE_BEGIN,
+						responseCode,
+						header,
+						HTTPSERVER_RESPONSE_END
 				);
 			}
 		}
@@ -954,18 +953,16 @@ public class RequestV2 extends HTTPResource {
 
 	private String getRendererName() {
 		String rendererName;
-		if (mediaRenderer != null) {
-			if (isNotBlank(mediaRenderer.getRendererName())) {
-				if (
-					isBlank(mediaRenderer.getConfName()) ||
-					mediaRenderer.getRendererName().equals(mediaRenderer.getConfName())
-				) {
-					rendererName = mediaRenderer.getRendererName();
+		if (renderer != null) {
+			if (StringUtils.isNotBlank(renderer.getRendererName())) {
+				if (StringUtils.isBlank(renderer.getConfName()) ||
+						renderer.getRendererName().equals(renderer.getConfName())) {
+					rendererName = renderer.getRendererName();
 				} else {
-					rendererName = mediaRenderer.getRendererName() + " [" + mediaRenderer.getConfName() + "]";
+					rendererName = renderer.getRendererName() + " [" + renderer.getConfName() + "]";
 				}
-			} else if (isNotBlank(mediaRenderer.getConfName())) {
-				rendererName = mediaRenderer.getConfName();
+			} else if (StringUtils.isNotBlank(renderer.getConfName())) {
+				rendererName = renderer.getConfName();
 			} else {
 				rendererName = "Unnamed";
 			}
@@ -991,7 +988,7 @@ public class RequestV2 extends HTTPResource {
 	private static String getSystemUpdateIdHandler() {
 		StringBuilder payload = new StringBuilder();
 		payload.append(HTTPXMLHelper.GETSYSTEMUPDATEID_HEADER).append(CRLF);
-		payload.append("<Id>").append(DLNAResource.getSystemUpdateId()).append("</Id>").append(CRLF);
+		payload.append("<Id>").append(MediaStoreIds.getSystemUpdateId()).append("</Id>").append(CRLF);
 		payload.append(HTTPXMLHelper.GETSYSTEMUPDATEID_FOOTER);
 		return createResponse(payload.toString()).toString();
 	}
@@ -1010,15 +1007,15 @@ public class RequestV2 extends HTTPResource {
 
 	private StringBuilder samsungGetFeaturesListHandler() {
 		StringBuilder features = new StringBuilder();
-		String rootFolderId = PMS.get().getRootFolder(mediaRenderer).getResourceId();
+		String mediaStoreId = renderer.getMediaStore().getResourceId();
 		features.append("<Features xmlns=\"urn:schemas-upnp-org:av:avs\"");
 		features.append(" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"");
 		features.append(" xsi:schemaLocation=\"urn:schemas-upnp-org:av:avs http://www.upnp.org/schemas/av/avs.xsd\">").append(CRLF);
 		features.append("<Feature name=\"samsung.com_BASICVIEW\" version=\"1\">").append(CRLF);
 		// we may use here different container IDs in the future
-		features.append("<container id=\"").append(rootFolderId).append("\" type=\"object.item.audioItem\"/>").append(CRLF);
-		features.append("<container id=\"").append(rootFolderId).append("\" type=\"object.item.videoItem\"/>").append(CRLF);
-		features.append("<container id=\"").append(rootFolderId).append("\" type=\"object.item.imageItem\"/>").append(CRLF);
+		features.append("<container id=\"").append(mediaStoreId).append("\" type=\"object.item.audioItem\"/>").append(CRLF);
+		features.append("<container id=\"").append(mediaStoreId).append("\" type=\"object.item.videoItem\"/>").append(CRLF);
+		features.append("<container id=\"").append(mediaStoreId).append("\" type=\"object.item.imageItem\"/>").append(CRLF);
 		features.append("</Feature>").append(CRLF);
 		features.append("</Features>").append(CRLF);
 
@@ -1033,15 +1030,15 @@ public class RequestV2 extends HTTPResource {
 		return createResponse(response.toString());
 	}
 
-	private StringBuilder browseHandler() {
+	private StringBuilder browseHandler() throws ContentDirectoryException {
 		BrowseRequest requestMessage = getPayload(BrowseRequest.class);
 		return this.browseSearchHandler(requestMessage);
 	}
 
-	private StringBuilder searchHandler() {
+	private StringBuilder searchHandler() throws ContentDirectoryException {
 		SearchRequest requestMessage = getPayload(SearchRequest.class);
 		try {
-			return searchRequestHandler.createSearchResponse(requestMessage, mediaRenderer);
+			return searchRequestHandler.createSearchResponse(requestMessage, renderer);
 		} catch (Exception e) {
 			LOGGER.trace("error transforming searchCriteria to SQL. Fallback to content browsing ...", e);
 			return browseHandler();
@@ -1049,15 +1046,15 @@ public class RequestV2 extends HTTPResource {
 	}
 
 	/**
-	 * Hybrid handler for Browse and Search requests.
-	 * FIXME: Should be split up into separate implementations!
-	 * New implementation use JUPnP, so forgot this
+	 * Hybrid handler for Browse and Search requests. FIXME: Should be split up
+	 * into separate implementations! New implementation use JUPnP, so forgot
+	 * this
 	 *
 	 * @param requestMessage parsed message
 	 * @return Soap response as a XML string
 	 */
-	private StringBuilder browseSearchHandler(BrowseSearchRequest requestMessage) {
-		boolean xbox360 = mediaRenderer.isXbox360();
+	private StringBuilder browseSearchHandler(BrowseSearchRequest requestMessage) throws ContentDirectoryException {
+		boolean xbox360 = renderer.isXbox360();
 		String objectID = requestMessage.getObjectId();
 		String containerID = null;
 		if ((objectID == null || objectID.length() == 0)) {
@@ -1089,21 +1086,22 @@ public class RequestV2 extends HTTPResource {
 
 		// Xbox 360 virtual containers ... d'oh!
 		String searchCriteria = null;
-		if (xbox360 && configuration.getUseCache() && PMS.get().getLibrary().isEnabled() && containerID != null) {
-			if (containerID.equals("7") && PMS.get().getLibrary().getAlbumFolder() != null) {
-				objectID = PMS.get().getLibrary().getAlbumFolder().getResourceId();
-			} else if (containerID.equals("6") && PMS.get().getLibrary().getArtistFolder() != null) {
-				objectID = PMS.get().getLibrary().getArtistFolder().getResourceId();
-			} else if (containerID.equals("5") && PMS.get().getLibrary().getGenreFolder() != null) {
-				objectID = PMS.get().getLibrary().getGenreFolder().getResourceId();
-			} else if (containerID.equals("F") && PMS.get().getLibrary().getPlaylistFolder() != null) {
-				objectID = PMS.get().getLibrary().getPlaylistFolder().getResourceId();
-			} else if (containerID.equals("4") && PMS.get().getLibrary().getAllFolder() != null) {
-				objectID = PMS.get().getLibrary().getAllFolder().getResourceId();
+		if (xbox360 && containerID != null) {
+			MediaLibrary library = renderer.getMediaStore().getMediaLibrary();
+			if (containerID.equals("7") && library.getAlbumFolder() != null) {
+				objectID = library.getAlbumFolder().getResourceId();
+			} else if (containerID.equals("6") && library.getArtistFolder() != null) {
+				objectID = library.getArtistFolder().getResourceId();
+			} else if (containerID.equals("5") && library.getGenreFolder() != null) {
+				objectID = library.getGenreFolder().getResourceId();
+			} else if (containerID.equals("F") && library.getPlaylistFolder() != null) {
+				objectID = library.getPlaylistFolder().getResourceId();
+			} else if (containerID.equals("4") && library.getAllFolder() != null) {
+				objectID = library.getAllFolder().getResourceId();
 			} else if (containerID.equals("1")) {
 				String artist = getEnclosingValue(content, "upnp:artist = &quot;", "&quot;)");
 				if (artist != null) {
-					objectID = PMS.get().getLibrary().getArtistFolder().getResourceId();
+					objectID = library.getArtistFolder().getResourceId();
 					searchCriteria = artist;
 				}
 			}
@@ -1111,46 +1109,54 @@ public class RequestV2 extends HTTPResource {
 			searchCriteria = requestMessage.getSearchCriteria();
 		}
 
-		List<DLNAResource> files = PMS.get().getRootFolder(mediaRenderer).getDLNAResources(
-			objectID,
-			browseDirectChildren,
-			startingIndex,
-			requestCount,
-			mediaRenderer,
-			searchCriteria
+		List<StoreResource> resources = renderer.getMediaStore().getResources(
+				objectID,
+				browseDirectChildren
 		);
 
-		if (searchCriteria != null && files != null) {
-			UMSUtils.filterResourcesByName(files, searchCriteria, false, false);
-			if (xbox360 && !files.isEmpty()) {
-				files = files.get(0).getChildren();
+		if (resources != null) {
+			//handle searchCriteria
+			if (searchCriteria != null) {
+				UMSUtils.filterResourcesByName(resources, searchCriteria, false, false);
+				if (xbox360 && !resources.isEmpty() && resources.get(0) instanceof StoreContainer libraryContainer) {
+					resources = libraryContainer.getChildren();
+				}
+			}
+			//handle startingIndex and requestedCount
+			if (startingIndex != 0 || requestCount != 0) {
+				int toIndex;
+				if (requestCount == 0) {
+					toIndex = resources.size();
+				} else {
+					toIndex = Math.min(startingIndex + requestCount, resources.size());
+				}
+				resources = resources.subList(startingIndex, toIndex);
 			}
 		}
 
 		int minus = 0;
 		StringBuilder filesData = new StringBuilder();
-		if (files != null) {
-			for (DLNAResource uf : files) {
-				if (uf instanceof PlaylistFolder playlistFolder) {
-					File f = new File(uf.getFileName());
-					if (uf.getLastModified() < f.lastModified()) {
+		if (resources != null) {
+			for (StoreResource resource : resources) {
+				if (resource instanceof PlaylistFolder playlistFolder) {
+					File f = new File(resource.getFileName());
+					if (resource.getLastModified() < f.lastModified()) {
 						playlistFolder.resolve();
 					}
 				}
 
-				if (xbox360 && containerID != null && uf != null) {
-					uf.setFakeParentId(containerID);
+				if (xbox360 && containerID != null && resource != null) {
+					resource.setFakeParentId(containerID);
 				}
 
-				if (
-					uf != null &&
-					(uf.isCompatible(mediaRenderer) &&
-					(uf.getEngine() == null || uf.getEngine().isEngineCompatible(mediaRenderer)) ||
-					// do not check compatibility of the media for items in the FileTranscodeVirtualFolder because we need
-					// all possible combination not only those supported by renderer because the renderer setting could be wrong.
-					files.get(0).isInsideTranscodeFolder())
-				) {
-					filesData.append(uf.getDidlString(mediaRenderer));
+				if (resource instanceof StoreContainer) {
+					filesData.append(DidlHelper.getDidlString(resource));
+				} else if (resource instanceof StoreItem item && (item.isCompatible() &&
+						(item.getEngine() == null || item.getEngine().isEngineCompatible(renderer)) ||
+						// do not check compatibility of the media for items in the FileTranscodeVirtualFolder because we need
+						// all possible combination not only those supported by renderer because the renderer setting could be wrong.
+						resources.get(0).isInsideTranscodeFolder())) {
+					filesData.append(DidlHelper.getDidlString(resource));
 				} else {
 					minus++;
 				}
@@ -1174,25 +1180,18 @@ public class RequestV2 extends HTTPResource {
 		response.append(CRLF);
 
 		int filessize = 0;
-		if (files != null) {
-			filessize = files.size();
+		if (resources != null) {
+			filessize = resources.size();
 		}
 
 		response.append("<NumberReturned>").append(filessize - minus).append("</NumberReturned>");
 		response.append(CRLF);
-		DLNAResource parentFolder;
 
-		if (files != null && filessize > 0) {
-			parentFolder = files.get(0).getParent();
-		} else {
-			parentFolder = PMS.get().getRootFolder(mediaRenderer).getDLNAResource(objectID, mediaRenderer);
-		}
-
-		if (browseDirectChildren && mediaRenderer.isUseMediaInfo() && mediaRenderer.isDLNATreeHack()) {
-			// with the new parser, files are parsed and analyzed *before*
+		if (browseDirectChildren && renderer.isUseMediaInfo() && renderer.isDLNATreeHack()) {
+			// with the new parser, resources are parsed and analyzed *before*
 			// creating the DLNA tree, every 10 items (the ps3 asks 10 by 10),
 			// so we do not know exactly the total number of items in the DLNA folder to send
-			// (regular files, plus the #transcode folder, maybe the #imdb one, also files can be
+			// (regular resources, plus the #transcode folder, maybe the #imdb one, also resources can be
 			// invalidated and hidden if format is broken or encrypted, etc.).
 			// let's send a fake total size to force the renderer to ask following items
 			int totalCount = startingIndex + requestCount + 1; // returns 11 when 10 asked
@@ -1204,7 +1203,23 @@ public class RequestV2 extends HTTPResource {
 
 			response.append("<TotalMatches>").append(totalCount).append("</TotalMatches>");
 		} else if (browseDirectChildren) {
-			response.append("<TotalMatches>").append(((parentFolder != null) ? parentFolder.childrenNumber() : filessize) - minus).append("</TotalMatches>");
+			StoreContainer parentFolder;
+			if (resources != null && filessize > 0) {
+				parentFolder = resources.get(0).getParent();
+			} else {
+				StoreResource resource = renderer.getMediaStore().getResource(objectID);
+				if (resource instanceof StoreContainer storeContainer) {
+					parentFolder = storeContainer;
+				} else {
+					if (resource instanceof StoreItem) {
+						LOGGER.debug("Trying to browse direct children on a store item for objectID '{}' !", objectID);
+					} else {
+						LOGGER.debug("Trying to browse direct children on a null object for objectID '{}' !", objectID);
+					}
+					throw new ContentDirectoryException(ContentDirectoryErrorCode.NO_SUCH_OBJECT);
+				}
+			}
+			response.append("<TotalMatches>").append(((parentFolder != null) ? parentFolder.childrenCount() : filessize) - minus).append("</TotalMatches>");
 		} else {
 			// From upnp spec: If BrowseMetadata is specified in the BrowseFlags then TotalMatches = 1
 			response.append("<TotalMatches>1</TotalMatches>");
@@ -1212,26 +1227,30 @@ public class RequestV2 extends HTTPResource {
 		response.append(CRLF);
 
 		/**
-		 * From page 95, section 5.5.8.2 of http://www.upnp.org/specs/av/UPnP-av-ContentDirectory-v4-Service.pdf
+		 * From page 95, section 5.5.8.2 of
+		 * http://www.upnp.org/specs/av/UPnP-av-ContentDirectory-v4-Service.pdf
 		 *
-		 * UpdateID: The value returned in the UpdateID argument shall be the SystemUpdateID
-		 * state variable value at the time the Browse() response was generated. If a control point
-		 * finds that the current SystemUpdateID state variable value is not equal to the value
-		 * returned in the UpdateID argument, then a change within the ContentDirectory service has
-		 * occurred between the time the result was generated and the time that the control point is
-		 * processing the result. The control point might therefore want to re-invoke the Browse()
-		 * action to ensure that it has the latest property values. Note however that the change in the
-		 * value of the SystemUpdateID state variable could have been caused by a change that
-		 * occurred in a location in the ContentDirectory tree hierarchy that is not part of the returned
-		 * result. In this case, the re-invocation of the Browse() action will return the exact same
-		 * result.
-		 * Note: This definition is not backwards compatible with previous versions of this
-		 * specification. However, the previous definition did not indicate changes to properties
-		 * of child containers. Therefore the control point would not have been aware that it had
-		 * stale data.
+		 * UpdateID: The value returned in the UpdateID argument shall be the
+		 * SystemUpdateID state variable value at the time the Browse() response
+		 * was generated. If a control point finds that the current
+		 * SystemUpdateID state variable value is not equal to the value
+		 * returned in the UpdateID argument, then a change within the
+		 * ContentDirectory service has occurred between the time the result was
+		 * generated and the time that the control point is processing the
+		 * result. The control point might therefore want to re-invoke the
+		 * Browse() action to ensure that it has the latest property values.
+		 * Note however that the change in the value of the SystemUpdateID state
+		 * variable could have been caused by a change that occurred in a
+		 * location in the ContentDirectory tree hierarchy that is not part of
+		 * the returned result. In this case, the re-invocation of the Browse()
+		 * action will return the exact same result. Note: This definition is
+		 * not backwards compatible with previous versions of this
+		 * specification. However, the previous definition did not indicate
+		 * changes to properties of child containers. Therefore the control
+		 * point would not have been aware that it had stale data.
 		 */
 		response.append("<UpdateID>");
-		response.append(DLNAResource.getSystemUpdateId());
+		response.append(MediaStoreIds.getSystemUpdateId());
 		response.append("</UpdateID>");
 		response.append(CRLF);
 
@@ -1262,25 +1281,23 @@ public class RequestV2 extends HTTPResource {
 	private StringBuilder samsungSetBookmarkHandler() {
 		LOGGER.debug("Setting bookmark");
 		SamsungBookmark payload = this.getPayload(SamsungBookmark.class);
-		if (payload.getPosSecond() == 0) {
-			// Sometimes when Samsung device is starting to play the video
-			// it sends X_SetBookmark message immediately with the position=0.
-			// No need to update database in such case.
-			LOGGER.debug("Skipping \"set bookmark\". Position=0");
-		} else {
-			Connection connection = null;
-			try {
-				connection = MediaDatabase.getConnectionIfAvailable();
-				if (connection != null) {
-					DLNAResource dlna = PMS.get().getRootFolder(mediaRenderer).getDLNAResource(payload.getObjectId(), mediaRenderer);
-					File file = new File(dlna.getFileName());
-					String path = file.getCanonicalPath();
-					MediaTableFilesStatus.setBookmark(connection, path, payload.getPosSecond());
+		if (payload != null) {
+			if (payload.getPosSecond() == 0) {
+				// Sometimes when Samsung device is starting to play the video
+				// it sends X_SetBookmark message immediately with the position=0.
+				// No need to update database in such case.
+				LOGGER.debug("Skipping \"set bookmark\". Position=0");
+			} else {
+				StoreResource resource = renderer.getMediaStore().getResource(payload.getObjectId());
+				if (resource.getMediaStatus() != null) {
+					try {
+						File file = new File(resource.getFileName());
+						String path = file.getCanonicalPath();
+						MediaStatusStore.setBookmark(path, renderer.getAccountUserId(), payload.getPosSecond());
+					} catch (IOException ex) {
+						LOGGER.error("Cannot set bookmark", ex);
+					}
 				}
-			} catch (IOException e) {
-				LOGGER.error("Cannot set bookmark", e);
-			} finally {
-				MediaDatabase.close(connection);
 			}
 		}
 		return createResponse(HTTPXMLHelper.SETBOOKMARK_RESPONSE);
@@ -1300,12 +1317,15 @@ public class RequestV2 extends HTTPResource {
 	}
 
 	/**
-	 * Returns the string value that is enclosed by the left and right tag in a content string.
-	 * Only the first match of each tag is used to determine positions. If either of the tags
-	 * cannot be found, null is returned.
-	 * @param content The entire {@link String} that needs to be searched for the left and right tag.
+	 * Returns the string value that is enclosed by the left and right tag in a
+	 * content string. Only the first match of each tag is used to determine
+	 * positions. If either of the tags cannot be found, null is returned.
+	 *
+	 * @param content The entire {@link String} that needs to be searched for
+	 * the left and right tag.
 	 * @param leftTag The {@link String} determining the match for the left tag.
-	 * @param rightTag The {@link String} determining the match for the right tag.
+	 * @param rightTag The {@link String} determining the match for the right
+	 * tag.
 	 * @return The {@link String} that was enclosed by the left and right tag.
 	 */
 	private static String getEnclosingValue(String content, String leftTag, String rightTag) {
@@ -1323,14 +1343,14 @@ public class RequestV2 extends HTTPResource {
 
 	private String subscribeHandler(HttpResponse output) throws IOException {
 		StringBuilder response = new StringBuilder();
-		output.headers().set("SID", PMS.get().usn());
+		output.headers().set("SID", MediaServer.getUniqueDeviceName());
 
 		/**
 		 * Requirement [7.2.22.1]: UPnP devices must send events to all properly
-		 * subscribed UPnP control points. The device must enforce a subscription
-		 * TIMEOUT value of 5 minutes.
-		 * The UPnP device behavior of enforcing this 5 minutes TIMEOUT value is
-		 * implemented by specifying "TIMEOUT: second-300" as an HTTP header/value pair.
+		 * subscribed UPnP control points. The device must enforce a
+		 * subscription TIMEOUT value of 5 minutes. The UPnP device behavior of
+		 * enforcing this 5 minutes TIMEOUT value is implemented by specifying
+		 * "TIMEOUT: second-300" as an HTTP header/value pair.
 		 */
 		output.headers().set("TIMEOUT", "Second-300");
 
@@ -1338,16 +1358,14 @@ public class RequestV2 extends HTTPResource {
 			String cb = soapaction.replace("<", "").replace(">", "");
 
 			try {
-				URL soapActionUrl = new URL(cb);
+				URL soapActionUrl = URI.create(cb).toURL();
 				String addr = soapActionUrl.getHost();
 				int port = soapActionUrl.getPort();
 				try (
-						Socket sock = new Socket(addr, port);
-						OutputStream out = sock.getOutputStream()
-				) {
+						Socket sock = new Socket(addr, port); OutputStream out = sock.getOutputStream()) {
 					out.write(("NOTIFY /" + uri + " HTTP/1.1").getBytes(StandardCharsets.UTF_8));
 					out.write(CRLF.getBytes(StandardCharsets.UTF_8));
-					out.write(("SID: " + PMS.get().usn()).getBytes(StandardCharsets.UTF_8));
+					out.write(("SID: " + MediaServer.getUniqueDeviceName()).getBytes(StandardCharsets.UTF_8));
 					out.write(CRLF.getBytes(StandardCharsets.UTF_8));
 					out.write(("SEQ: " + 0).getBytes(StandardCharsets.UTF_8));
 					out.write(CRLF.getBytes(StandardCharsets.UTF_8));
@@ -1359,7 +1377,7 @@ public class RequestV2 extends HTTPResource {
 					out.write(CRLF.getBytes(StandardCharsets.UTF_8));
 					out.flush();
 				}
-			} catch (MalformedURLException ex) {
+			} catch (IllegalArgumentException | MalformedURLException ex) {
 				LOGGER.debug("Cannot parse address and port from soap action \"" + soapaction + "\"", ex);
 			}
 		} else {
@@ -1368,7 +1386,7 @@ public class RequestV2 extends HTTPResource {
 		response.append(HTTPXMLHelper.eventHeader("urn:schemas-upnp-org:service:ContentDirectory:1"));
 		response.append(HTTPXMLHelper.eventProp("TransferIDs"));
 		response.append(HTTPXMLHelper.eventProp("ContainerUpdateIDs"));
-		response.append(HTTPXMLHelper.eventProp("SystemUpdateID", "" + DLNAResource.getSystemUpdateId()));
+		response.append(HTTPXMLHelper.eventProp("SystemUpdateID", "" + MediaStoreIds.getSystemUpdateId()));
 		response.append(HTTPXMLHelper.EVENT_FOOTER);
 		return response.toString();
 	}
@@ -1377,7 +1395,7 @@ public class RequestV2 extends HTTPResource {
 		output.headers().set(HttpHeaders.Names.CONTENT_TYPE, "text/xml");
 		output.headers().set("NT", "upnp:event");
 		output.headers().set("NTS", "upnp:propchange");
-		output.headers().set("SID", PMS.get().usn());
+		output.headers().set("SID", MediaServer.getUniqueDeviceName());
 		output.headers().set("SEQ", "0");
 
 		StringBuilder response = new StringBuilder();
@@ -1389,16 +1407,16 @@ public class RequestV2 extends HTTPResource {
 		response.append("<ContainerUpdateIDs></ContainerUpdateIDs>");
 		response.append("</e:property>");
 		response.append("<e:property>");
-		response.append("<SystemUpdateID>").append(DLNAResource.getSystemUpdateId()).append("</SystemUpdateID>");
+		response.append("<SystemUpdateID>").append(MediaStoreIds.getSystemUpdateId()).append("</SystemUpdateID>");
 		response.append("</e:property>");
 		response.append("</e:propertyset>");
 		return response.toString();
 	}
 
 	//------------------------- END ContentDirectory -------------------------
-
 	/**
 	 * Returns a date somewhere in the far future.
+	 *
 	 * @return The {@link String} containing the date
 	 */
 	private static String getFutureDate() {
@@ -1406,7 +1424,4 @@ public class RequestV2 extends HTTPResource {
 		return SDF.format(new Date(10000000000L + System.currentTimeMillis()));
 	}
 
-	public String getUri() {
-		return uri;
-	}
 }
